fix icon colors when dark mode

--- a/style.css
+++ b/style.css
@@ -276,6 +276,10 @@ input:checked + .toggle:before {
   color: #00A8A2;
 }
 
+.dark .icon {
+  filter: invert(1);
+}
+
 @media screen and (max-width: 900px) {
   .intro {
     padding: 50px 50px 0px 50px;
